apps/media/radarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:6.3.0.10514-ls312
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
          ports:
            - name: http
              containerPort: 7878
              protocol: TCP
          volumeMounts:
            - name: media-pvc
              mountPath: "/media"
            - name: config-pvc
              mountPath: "/config"
      volumes:
        - name: media-pvc
          persistentVolumeClaim:
            claimName: media
        - name: config-pvc
          persistentVolumeClaim:
            claimName: radarr-config
        - name: config-cm
          configMap:
            name: radarr-cm
